# Sagittarius

./: .gitignore  readme.md  settings.gradle  wpc.jks
BiuBiu/biubiu/src/: CMakeLists.txt
BiuBiu/biubiu/src/main/: AndroidManifest.xml
BiuBiu/biubiu/src/main/debug/: AndroidManifest.xml
BiuBiu/biubiu/src/main/jni/: com_im_hero_diffpatch_BsDiff.c  com_im_hero_diffpatch_BsDiff.h  im_hero_log.h
BiuBiu/biubiu/src/main/res/layout/: activity_image_preview.xml  enhance_tab_layout.xml  fragment_main.xml
BiuBiu/biubiu/src/main/res/values/: theme.xml
BiuBiu/biubiu/src/main/res/values-night/: colors.xml
BiuBiu/biubiu/src/main/res_common/drawable/: search_edit_bg.xml
BiuBiu/biubiu/src/main/res_common/layout/: dialog_input.xml  dialog_notice.xml
BiuBiu/biubiu/src/main/res_meitu/drawable/: tab_checked.xml
BiuBiu/biubiu/src/main/res_meitu/layout/: activity_album_detail.xml  activity_feedback.xml  activity_feedback_list.xml  activity_find_model.xml  activity_meitu_base_recycler_activity.xml  activity_meitu_collections.xml  activity_meitu_login.xml  activity_meitu_main.xml  activity_meitu_main_v2.xml  activity_meitu_search.xml  activity_meitu_select_tab.xml  activity_model_info.xml  activity_splash.xml  buttom_bar.xml  fragment_follow_models.xml  fragment_home_follow.xml  fragment_home_home.xml  fragment_meitu_mine.xml  fragments_trend.xml  item2_meitu_colum.xml  item2_meitu_model.xml  item3_meitu_model.xml  item_meitu_company.xml  item_meitu_feedback.xml  item_meitu_model.xml  item_meitu_model_hor.xml  item_visit_histroy.xml  item_zone_cyc_album_kuan.xml  iv_100dp.xml  (+7 more)
(+696 files in other folders)
